tests/language/function/malformed_result_type_test.dart
// Copyright (c) 2012, the Dart project authors.  Please see the AUTHORS file
// for details. All rights reserved. Use of this source code is governed by a
// BSD-style license that can be found in the LICENSE file.

// Dart test for a function with a malformed result type.

import "package:expect/expect.dart";

class C<T, U> {}

main() {
  C<int> f() => throw "uncalled";
//^^^^^^
// [analyzer] COMPILE_TIME_ERROR.WRONG_NUMBER_OF_TYPE_ARGUMENTS
// [cfe] Expected 2 type arguments.
}
